# chrg_tools

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.rst  build_local_database.py  compare_parsers.py  config.toml  fetch_study_records.py  fetch_transcripts.py  get_package_summaries_by_congress.py  load_committees.py  pickle_test_data.ipynb  pyproject.toml  table_config.sql
chrg_tools/: api_client.py  config.toml  db_handler.py  db_models.py  example-env  load_project_env.py  mods_page_parser.py  summary_parsing_types.py  transcript_parser.py
chrg_tools/gpo_tools/gpo_tools/: parse.py  scrape.py
chrg_tools/hearings/: db_context_manager.py  populate_old_hearings.py  populate_old_parsed_statements.py  postgres_setup.py  table_config.sql
chrg_tools/metadata_migration/: load_committees.py  mongo_connect.py  mongo_migration.py  populate_old_parsed_statements.py  postgres_setup.py
chrg_tools/parsed/: test.py
hearings/: config.toml  load_committees.py  load_project_env.py  mongo_connect.py  mongo_migration.py  postgres_setup.py  scratch.ipynb  table_config.sql
hearings_lib/: api_client.py  config.toml  db_handler.py  db_models.py  load_project_env.py  mods_page_parser.py  scratch.ipynb  summary_parsing_types.py  transcript_parser.py
hearings_lib/gpo_tools/gpo_tools/: parse.py
hearings_lib/hearings/: file_name_id_map.csv  parser.py  populate_new_parsed_statements.py  populate_old_parsed_statements.py  postgres_setup.py  scratch.ipynb  table_config.sql  update_db.py
tests/: example_mods.xml  mod_fixtures.py  test_api_client.py  test_db_config.py  test_mods_parser.py  test_process_unique_subrecords.py  test_standard_speaker_pattern.py  test_sync_hearing_records.py
tests/sample_api_responses/: example_summary_response.json
tests/sample_mods/: alt_mods.xml
tests/sql_dumps/: cong113.sql
tests/study_ids/: file_name_id_map.csv
