[tool.poetry]
name = "hearings_lib"
version = "0.1.0"
description = "Creating a clean dataset, API, and analysis toolset of congressional hearing testimony"
authors = ["Samuel Elkind <samuel.elkind@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
toml = "^0.10.2"
psycopg2-binary = "^2.8.6"
gensim = "^4.0.1"
nltk = "^3.6.1"
python-dotenv = "^0.17.0"
flake8 = "^3.9.0"
bs4 = "^0.0.1"
SQLAlchemy = "^1.4.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
