[tool.poetry]
name = "chrg_tools"
version = "0.1.0"
description = "Tools to work with govinfo's Congressional hearing packages API. Includes API client (bulk metadata and transcript downloader), relational schema for hearing metadata, and in the future, testimony transcript parsing"
authors = ["Samuel Elkind <samuel.elkind@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
toml = "^0.10.2"
psycopg2-binary = "^2.8.6"
gensim = "^4.0.1"
nltk = "^3.6.1"
python-dotenv = "^0.17.0"
flake8 = "^3.9.0"
bs4 = "^0.0.1"
SQLAlchemy = "^1.4.8"
testcontainers = {extras = ["postgres"], version = "^3.4.0"}
pytest = "^6.2.3"
responses = "^0.13.2"
lxml = "^4.6.3"
tqdm = "^4.60.0"
python-dateutil = "^2.8.1"
mmh3 = "^3.0.0"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.0.14"
SQLAlchemy-Utils = "^0.37.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "webtest: marks tests as hitting remote API endpoints",
]